--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,8 +3,9 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/musq8219/public_html
     - /bin/cp -R application $DEPLOYPATH
+    - /bin/cp -R AdminLTE-2.4.13 $DEPLOYPATH
     - /bin/cp -R assets $DEPLOYPATH
     - /bin/cp -R system $DEPLOYPATH
     - /bin/cp index.php $DEPLOYPATH
     - /bin/cp .cpanel.yml $DEPLOYPATH    
-    - /bin/cp .htaccess $DEPLOYPATH
+    - /bin/cp .htaccess $DEPLOYPATH  
